# dioxus-fullstack-docker-example

./: Cargo.toml  Dioxus.toml  Dockerfile  index.html
src/: main.rs
